# src/models/contact-information.ts
@@ -8,25 +8,4 @@ export class ContactInformation {
     ) {
 
     }
-
-    public valid(): boolean {
-        if (this.addressValid() && this.emailAddressValid() && this.phoneNumberValid()) {
-            return true;
-        }
-
-        return false;
-    }
-
-    private addressValid(): boolean {
-        return this.address ? this.address.valid() : false;
-    }
-
-    private emailAddressValid(): boolean {
-        return this.emailAddress ? true : false;
-    }
-
-    private phoneNumberValid(): boolean {
-        return this.phoneNumber ? true : false;
-    }
-
 }
