# src/models/query.ts
@@ -1,12 +1,0 @@
-export class Query {
-    constructor(
-        public city: string,
-        public emailAddress: string,
-        public firstName: string,
-        public identificationNumber: string,
-        public lastName: string,
-        public phoneNumber: string,
-    ) {
-
-    }
-}
